build file jar for project

--- a/retail/src/main/resources/application.properties
+++ b/retail/src/main/resources/application.properties
@@ -22,6 +22,12 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.open-in-view=false
 
+#firebase
+firebase.credentials-path=firebase/firebase-key.json
+firebase.storage.bucket-name=retailstorage-5432c.appspot.com
+firebase.storage.image-link=https://firebasestorage.googleapis.com/v0/b/%s/o/%s?alt=media
+
+
 #spring security
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
